tests/paczka1/small_fuzzy/24295153.err
Error in line 4: Rcq0PorpZ S376 36,8
Error in line 14: Rcq0PorpZ A781 49,8
